# DocuMind-RAG

./: .env.example  .gitignore  .mailmap  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  app_gradio.py  build_index.py  main.py  package-lock.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: README.md
docs/: README.md  api.md  architecture.md  configuration.md  development.md
documind/: __init__.py  __main__.py
scripts/: check_hf_connection.py  check_ollama.py
src/: __init__.py  config.py  exceptions.py  indexer.py  logging_config.py  pipeline.py  py.typed
src/embeddings/: __init__.py  embedder.py
src/generation/: __init__.py  generator.py  ollama_generator.py
src/ingestion/: __init__.py  chunker.py  loader.py
src/retrieval/: __init__.py  rag_pipeline.py  reranker.py  retriever.py
src/vectorstore/: __init__.py  faiss_store.py
storage/: README.md  doc_index.index  doc_index.meta.json
tests/: README.md  __init__.py  build_index.py  run_all.py  test_chunker.py  test_embedder.py  test_faiss_store.py  test_full_pipeline.py  test_loader.py  test_rag_pipeline.py  test_retriever.py
tests/sample_data/: create_sample_pdf.py
